tests/programs/error_mut_ref_double_call.con
// Two function calls consuming the same borrow-block ref.
// Expected error: linear variable 'r' used after move

fn increment(x: &mut Int) {
    *x = *x + 1;
}

fn main() -> Int {
    let mut n: Int = 10;
    borrow mut n as r in R {
        increment(r);
        increment(r);  // error: r already consumed
    }
    return n;
}
